--- a/Capstone_Project_1_Final.ipynb
+++ b/Capstone_Project_1_Final.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "### Background - Why the Prediction of Early Readmission\n",
-    "Readmission within 30 days after a hospital discharge is a high-priority healthcare quality measure and target for cost reduction. It is a more severe situation among patients admitted for diabetes as the rate in those patients higher as compared to the overall early readmission rate. Therefore, this study aims to build a machine learning model to predict the likelihood of early readmissions among inpatient diabetes patients using a large hospital database from 1999 to 2008."
+    "Readmission within 30 days after a hospital discharge is a high-priority healthcare quality measure and target for cost reduction. It is a more severe situation among patients admitted for diabetes as the rate in those patients is higher as compared to the overall early readmission rate. Therefore, this study aims to build a machine learning model to predict the likelihood of early readmissions among inpatient diabetes patients using a large hospital database from 1999 to 2008."
    ]
   },
   {
