--- a/Capston_2.2_KNN.ipynb
+++ b/Capston_2.2_KNN.ipynb
@@ -65,8 +65,8 @@
     "import io\n",
     "from boto.s3.key import Key\n",
     "\n",
-    "ACCESS_KEY=\"AKIAIK7J5B3ZZOIXG2WA\"\n",
-    "SECRET_KEY=\"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\"\n",
+    "ACCESS_KEY=\"key\"\n",
+    "SECRET_KEY=\"key\"\n",
     "\n",
     "bucket='capstone0project2'\n",
     "file_key = 'train_2.csv'\n",
