--- a/Capston_2.2_KNN.ipynb
+++ b/Capston_2.2_KNN.ipynb
@@ -33,7 +33,7 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename=\"/Users/YingShen/Desktop/knn.png\",width=600,height=400)"
+    "Image(filename=\"knn.png\",width=600,height=400)"
    ]
   },
   {
