Update and rename Relax_DS_Challenge.ipynb to DS_Challenge/Relax_DS_Challenge.ipynb

--- a/DS_Challenge/Relax_DS_Challenge.ipynb
+++ b/DS_Challenge/Relax_DS_Challenge.ipynb
@@ -100,8 +100,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "path1=\"/Users/YingShen/Desktop/Data_Science/SpringBorad/Git/relax_challenge/takehome_user_engagement.csv\"\n",
-    "path2=\"/Users/YingShen/Desktop/Data_Science/SpringBorad/Git/relax_challenge/takehome_users.csv\"\n",
+    "path1=\"takehome_user_engagement.csv\"\n",
+    "path2=\"takehome_users.csv\"\n",
     "\n",
     "# First import the summary data\n",
     "df_sum = pd.read_csv(path1)\n",
