Update and rename Take-home_Challenge_1.ipynb to DS_Challenge/Take-home_Challenge_1.ipynb

--- a/DS_Challenge/Take-home_Challenge_1.ipynb
+++ b/DS_Challenge/Take-home_Challenge_1.ipynb
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "path=\"/Users/YingShen/Desktop/Data_Science/SpringBorad/Git/ultimate_challenge/logins.json\"\n",
+    "path=\"logins.json\"\n",
     "logins_raw=pd.read_json(path)\n",
     "print(logins_raw.shape)\n",
     "logins_raw.head()"
