--- a/Capstone_2_Time_Series_AWS/Capstone_2.2_KNN_Final.ipynb
+++ b/Capstone_2_Time_Series_AWS/Capstone_2.2_KNN_Final.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center>Long-term Visits Prediction of 140K Web Pages</center></h2>\n",
-    "<font color=blue><h3><center>======= Part 2. KNN Approach with 145 Samples ========</center></h3></font>"
+    "Long-term Visits Prediction of 140K Web Pages\n",
+    "======= Part 2. KNN Approach with 145 Samples ========"
    ]
   },
   {
